--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "rohit",
   "license": "ISC",
   "keywords": [
     "errr"
   ],
-  "description": "",
   "dependencies": {
     "circular-json": "^0.5.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Whorohit/backendcloudbook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Whorohit/backendcloudbook/issues"
+  },
+  "homepage": "https://github.com/Whorohit/backendcloudbook#readme",
+  "description": ""
 }
